[package]
name = "controller-fire"
version = "0.1.0"
authors = ["Andrew Sutherland <asutherland@asutherland.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = { git = "https://github.com/Boddlnagg/midir.git", rev="14a3e17f486739586c7614b75900ff4143b88084" }
futures = "0.3.4"